crates/kjarni-ffi/dist/include/kjarni.h

/**
 * Error codes returned by Kjarni FFI functions.
 */
typedef enum KjarniErrorCode {
  /**
   * Operation completed successfully
   */
  KJARNI_ERROR_CODE_OK = 0,
  /**
   * Null pointer passed to function
   */
  KJARNI_ERROR_CODE_NULL_POINTER = 1,
  /**
   * Invalid UTF-8 string
   */
  KJARNI_ERROR_CODE_INVALID_UTF8 = 2,
  /**
   * Model not found in registry
   */
  KJARNI_ERROR_CODE_MODEL_NOT_FOUND = 3,
  /**
   * Failed to load model
   */
  KJARNI_ERROR_CODE_LOAD_FAILED = 4,
  /**
   * Inference operation failed
   */
  KJARNI_ERROR_CODE_INFERENCE_FAILED = 5,
  /**
   * GPU not available
   */
  KJARNI_ERROR_CODE_GPU_UNAVAILABLE = 6,
  /**
   * Invalid configuration
   */
  KJARNI_ERROR_CODE_INVALID_CONFIG = 7,
  /**
   * Operation was cancelled
   */
  KJARNI_ERROR_CODE_CANCELLED = 8,
  /**
   * Operation timed out
   */
  KJARNI_ERROR_CODE_TIMEOUT = 9,
  /**
   * Stream has ended
   */
  KJARNI_ERROR_CODE_STREAM_ENDED = 10,
  /**
   * A panic in the engine was caught at the ABI boundary. The library is in an
   * unspecified state for the operation that failed; the handle itself remains
   * valid to free. `kjarni_last_error_message` names the entry point.
   */
  KJARNI_ERROR_CODE_PANIC = 11,
  /**
   * Unknown error
   */
  KJARNI_ERROR_CODE_UNKNOWN = 255,
} KjarniErrorCode;
/**
 * Device selection for inference.
 */
typedef enum KjarniDevice {
  /**
   * Use CPU for inference
   */
  KJARNI_DEVICE_CPU = 0,
  /**
   * Use GPU for inference
   */
  KJARNI_DEVICE_GPU = 1,
} KjarniDevice;
/**
 * Opaque handle to a Classifier.
 */
typedef struct KjarniClassifier KjarniClassifier;
/**
 * Opaque handle to an Embedder instance.
 */
typedef struct KjarniEmbedder KjarniEmbedder;
/**
 * Float array returned by FFI functions. Caller must free with kjarni_float_array_free.
 */
typedef struct KjarniFloatArray {
  float *data;
  uintptr_t len;
} KjarniFloatArray;
/**
 * 2D float array for batch results. Caller must free with kjarni_float_2d_array_free.
 */
typedef struct KjarniFloat2DArray {
  float *data;
  uintptr_t rows;
  uintptr_t cols;
} KjarniFloat2DArray;
/**
 * Single classification result (label + score).
 */
typedef struct KjarniClassResult {
  char *label;
  float score;
} KjarniClassResult;
typedef struct KjarniClassResults {
  struct KjarniClassResult *results;
  uintptr_t len;
} KjarniClassResults;
typedef struct KjarniClassifierConfig {
  /**
   * Device to use
   */
  enum KjarniDevice device;
  /**
   * Cache directory (NULL = default)
   */
  const char *cache_dir;
  /**
   * Model name (NULL = default)
   */
  const char *model_name;
  /**
   * Model path (NULL = use registry)
   */
  const char *model_path;
  /**
   * Custom labels (NULL = use model labels)
   */
  const char *const *labels;
  /**
   * Number of custom labels
   */
  uintptr_t num_labels;
  /**
   * Multi-label mode (1 = multi-label, 0 = single-label)
   */
  int32_t multi_label;
  /**
   * Suppress output
   */
  int32_t quiet;
} KjarniClassifierConfig;
/**
 * Configuration for creating an Embedder.
 */
typedef struct KjarniEmbedderConfig {
  /**
   * Device to use (CPU or GPU)
   */
  enum KjarniDevice device;
  /**
   * Cache directory for models (NULL = default)
   */
  const char *cache_dir;
  /**
   * Model name from registry (NULL = "minilm-l6-v2")
   */
  const char *model_name;
  /**
   * Path to local model (NULL = use registry)
   */
  const char *model_path;
  /**
   * Whether to L2-normalize embeddings (1 = yes, 0 = no)
   */
  int32_t normalize;
  /**
   * Suppress progress output (1 = quiet, 0 = verbose)
   */
  int32_t quiet;
} KjarniEmbedderConfig;
/**
 * Initialize the Kjarni runtime. Optional - auto-initialized on first use.
 */
enum KjarniErrorCode kjarni_init(void);
/**
 * Get the library version string.
 */
const char *kjarni_version(void);
/**
 * Free a float array allocated by Kjarni.
 *
 * # Safety
 *
 * - `arr` must be a value returned by a search/embedding call, passed here exactly once. Its
 *   buffers are invalid to read afterwards.
 */
void kjarni_float_array_free(struct KjarniFloatArray arr);
/**
 * Free a 2D float array allocated by Kjarni.
 *
 * # Safety
 *
 * - `arr` must be a value returned by `kjarni_embedder_encode_batch`, passed here exactly once.
 *   Its buffers are invalid to read afterwards.
 */
void kjarni_float_2d_array_free(struct KjarniFloat2DArray arr);
/**
 * Free a string allocated by Kjarni.
 *
 * # Safety
 *
 * - `s` must be a valid, writable pointer to a `std::ffi::c_char`. It is written on both
 *   success and failure, and any buffers it receives are owned by the caller.
 */
void kjarni_string_free(char *s);
/**
 * # Safety
 *
 * - `results` must be a value returned by `kjarni_classifier_classify`, passed here exactly
 *   once. Its buffers are invalid to read afterwards.
 */
void kjarni_class_results_free(struct KjarniClassResults results);
/**
 * Get default classifier configuration.
 */
struct KjarniClassifierConfig kjarni_classifier_config_default(void);
/**
 * Create a new Classifier.
 *
 * # Safety
 * - `config` must be valid or NULL
 * - `out` must be a valid pointer
 * - The returned handle must be freed with `kjarni_classifier_free`
 */
enum KjarniErrorCode kjarni_classifier_new(const struct KjarniClassifierConfig *config,
                                           struct KjarniClassifier **out);
/**
 * Free a Classifier.
 *
 * # Safety
 *
 * - `classifier` must be null, or a handle returned by `kjarni_classifier_new` that has not
 *   already been passed to this function. It is invalid to use afterwards.
 */
void kjarni_classifier_free(struct KjarniClassifier *classifier);
/**
 * Classify a single text.
 *
 * # Safety
 *
 * - `classifier` must be null, or a live handle returned by `kjarni_classifier_new` that has
 *   not been freed.
 * - `text` must be null, or a valid pointer to a nul-terminated C string.
 * - `out` must be a valid, writable pointer to a `KjarniClassResults`. On `KJARNI_OK` it
 *   receives a value the caller owns and must release with the matching `*_free`; on
 *   failure it is either cleared or left unmodified, and must not be read.
 */
enum KjarniErrorCode kjarni_classifier_classify(struct KjarniClassifier *classifier,
                                                const char *text,
                                                struct KjarniClassResults *out);
/**
 * Get number of labels.
 *
 * # Safety
 *
 * - `classifier` must be null, or a live handle returned by `kjarni_classifier_new` that has
 *   not been freed.
 */
uintptr_t kjarni_classifier_num_labels(const struct KjarniClassifier *classifier);
/**
 * Get default embedder configuration.
 */
struct KjarniEmbedderConfig kjarni_embedder_config_default(void);
/**
 * Create a new Embedder.
 *
 * # Safety
 *
 * - `out` must be null, or a live handle returned by `kjarni_embedder_new` that has not been
 *   freed.
 */
enum KjarniErrorCode kjarni_embedder_new(const struct KjarniEmbedderConfig *config,
                                         struct KjarniEmbedder **out);
/**
 * Free an Embedder instance.
 *
 * # Safety
 *
 * - `embedder` must be null, or a handle returned by `kjarni_embedder_new` that has not
 *   already been passed to this function. It is invalid to use afterwards.
 */
void kjarni_embedder_free(struct KjarniEmbedder *embedder);
/**
 * Encode a single text to an embedding vector.
 *
 * # Safety
 *
 * - `embedder` must be null, or a live handle returned by `kjarni_embedder_new` that has not
 *   been freed.
 * - `text` must be null, or a valid pointer to a nul-terminated C string.
 * - `out` must be a valid, writable pointer to a `KjarniFloatArray`. On `KJARNI_OK` it
 *   receives a value the caller owns and must release with the matching `*_free`; on
 *   failure it is either cleared or left unmodified, and must not be read.
 */
enum KjarniErrorCode kjarni_embedder_encode(struct KjarniEmbedder *embedder,
                                            const char *text,
                                            struct KjarniFloatArray *out);
/**
 * Encode multiple texts to embedding vectors.
 *
 * # Safety
 *
 * - `embedder` must be null, or a live handle returned by `kjarni_embedder_new` that has not
 *   been freed.
 * - `texts` must point to `num_texts` readable pointers, each null or a valid nul-terminated
 *   C string that stays valid for the call.
 * - `out` must be a valid, writable pointer to a `KjarniFloat2DArray`. On `KJARNI_OK` it
 *   receives a value the caller owns and must release with the matching `*_free`; on
 *   failure it is either cleared or left unmodified, and must not be read.
 */
enum KjarniErrorCode kjarni_embedder_encode_batch(struct KjarniEmbedder *embedder,
                                                  const char *const *texts,
                                                  uintptr_t num_texts,
                                                  struct KjarniFloat2DArray *out);
/**
 * Compute cosine similarity between two texts.
 *
 * # Safety
 *
 * - `embedder` must be null, or a live handle returned by `kjarni_embedder_new` that has not
 *   been freed.
 * - `text1` must be null, or a valid pointer to a nul-terminated C string.
 * - `text2` must be null, or a valid pointer to a nul-terminated C string.
 * - `out` must be a valid, writable pointer to a `c_float`. It is written on both success and
 *   failure, and any buffers it receives are owned by the caller.
 */
enum KjarniErrorCode kjarni_embedder_similarity(struct KjarniEmbedder *embedder,
                                                const char *text1,
                                                const char *text2,
                                                float *out);
/**
 * Get the embedding dimension.
 *
 * # Safety
 *
 * - `embedder` must be null, or a live handle returned by `kjarni_embedder_new` that has not
 *   been freed.
 */
uintptr_t kjarni_embedder_dim(const struct KjarniEmbedder *embedder);
/**
 * Get the name of an error code as a C string.
 */
const char *kjarni_error_name(enum KjarniErrorCode err);
/**
 * Get the last error message. Returns NULL if no error.
 */
const char *kjarni_last_error_message(void);
/**
 * Clear the last error.
 */
void kjarni_clear_error(void);